--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,6 @@
 }
 
 .rev-Brand {
-  display: flex !important;
-  flex-direction: column !important;
+  display: flex;
+  flex-direction: column;
 }
