add recipebyid card. add new route to app

--- a/src/components/Recipes/Recipe.scss
+++ b/src/components/Recipes/Recipe.scss
@@ -45,3 +45,14 @@
     align-items: center;
   }
 }
+
+.ingredients-list {
+  background-color: lightblue;
+  padding: 15px;
+  margin: 24px 0;
+}
+
+.recipe-picture {
+  padding: 5px;
+  border: 1px solid black;
+}
