strip out filter functionality on homepage

--- a/src/components/Recipes/Recipe.scss
+++ b/src/components/Recipes/Recipe.scss
@@ -7,6 +7,11 @@
     color: black;
   }
 
+  .card-header {
+    background-color: #1761a0;
+    color: white;
+  }
+
   .search-item {
     padding: 5px;
     cursor: pointer;
