--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,8 +1,9 @@
 .footer-container {
-  height: 200px;
+  height: 100px;
   width: 100%;
   background-color: rgb(23, 96, 161);
   color: white;
   position: absolute;
-  bottom: 0;
+  //   top: 100%;
+  //   bottom: 0;
 }
