--- a/src/components/Recipes/Recipe.scss
+++ b/src/components/Recipes/Recipe.scss
@@ -58,6 +58,9 @@
   //   height: 100%;
   width: 100%;
   margin-top: 100px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
 
   .similar-recipe-container {
     background-color: #1761a0;
@@ -67,7 +70,7 @@
     justify-content: center;
     align-items: center;
     padding: 25px 0;
-    margin-left: 15px;
+    // margin-left: 15px;
   }
 
   .similar-recipe-container > a {
