--- a/src/components/Recipes/Recipe.scss
+++ b/src/components/Recipes/Recipe.scss
@@ -57,7 +57,7 @@
 .recipe-by-id-container {
   //   height: 100%;
   width: 100%;
-  margin-top: 100px;
+  margin-top: 25px;
   display: flex;
   justify-content: space-evenly;
   align-items: flex-start;
@@ -71,6 +71,7 @@
     align-items: center;
     padding: 25px 0;
     // margin-left: 15px;
+    margin-bottom: 25px;
   }
 
   .similar-recipe-container > a {
